# zenml-aws

./: .gitignore  README.md  pre-commit.yaml  pyproject.toml  ruff.toml
infrastructure/: Dockerfile  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  docker-compose.yaml
scripts/: test_run_step_operator.py
src/zenml_aws/: __init__.py  batch_job_definitions.py  batch_job_definitions_old.py  utils.py
src/zenml_aws/orchestrator/: aws_stepfunctions_batch_orchestrator.py  aws_stepfunctions_batch_orchestrator_flavor.py  aws_stepfunctions_batch_orchestrator_flavor_old.py  aws_stepfunctions_batch_orchestrator_old.py
src/zenml_aws/step_operator/: __init__.py  aws_batch_step_operator.py  aws_batch_step_operator_flavor.py
tests/unit/: test_aws_batch_step_operator_flavor.py  test_utils.py
