[project]
name = "zenml-aws"
version = "0.1.0"
description = "A collection of AWS integrations for the zenml platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.51",
    "botocore>=1.40.51",
    "zenml>=0.90.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Optional: configure uv settings here if desired
# example:
# resolver = "uv"
