[project]
name = "zenml-aws"
version = "0.1.0"
description = "A collection of AWS integrations for the zenml platform"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "zenml>=0.91.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
    "zenml[local,server]>=0.90.0",
    "sagemaker>=2.237.3",
    "aws-profile-manager",
    "s3fs>=2022.3.0",
    "boto3",
]

docker = [
    "zenml[local]>=0.91.0",
    "sagemaker>=2.237.3",
    "s3fs>=2025.9.0",
    "boto3==1.40.49",
    "aws-profile-manager",
]
infrastructure = [
    "pulumi>=3.197.0",
    "pulumi-aws>=7.7.0",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
